--- a/sidang/templates/sidang/index.html
+++ b/sidang/templates/sidang/index.html
@@ -14,7 +14,8 @@
     <!-- <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.css' %}"> -->
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <!-- ONLINE -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
 
@@ -87,6 +88,11 @@
             </a>
         </center>
 
+        {% if 'mhs_id' in request.session %}
+            <h6>
+                Tanggal Sidang : 
+            </h6>
+        {% endif %}
         <hr>
         <div class="table-responsive">
             <table class="table text-center">
@@ -95,6 +101,7 @@
 
                     {% if 'petugas_id' in request.session %}
                     <th>NIM</th>
+                    <th>Tanggal Sidang</th>
                     {% endif %}
 
                     <th>Surat Persetujuan</th>
@@ -108,12 +115,20 @@
                 </tr>
 
                 {% for data in dataSidang %}
-    
+
                 <tr>
                     <td>{{ data.id_sidang }}</td>
 
                     {% if 'petugas_id' in request.session %}
                     <td>{{ data.nim }}</td>
+                    
+                    <td>
+                        {% for w in dataWaktu %}
+                            {% if w.nim == data.nim %}
+                                {{ w.waktu_sidang }}
+                            {% endif %}
+                        {% endfor %}
+                    </td>
                     {% endif %}
 
                     <td>{{ data.s_persetujuan }}</td>
@@ -128,14 +143,15 @@
                             <a href="/sidang/{{ data.id_sidang }}/update/" class="text-center text-light">Edit</a>
                         </button>
                         <button type="submit" class="btn btn-danger">
-                            <a href="/sidang/{{ data.id_sidang }}/hapus/" class="text-center text-light" onclick="return confirm('Hapus Data?')">Hapus</a>
+                            <a href="/sidang/{{ data.id_sidang }}/hapus/" class="text-center text-light"
+                                onclick="return confirm('Hapus Data?')">Hapus</a>
                         </button>
                     </td>
                 </tr>
-    
+
                 {% endfor %}
-    
-                
+
+
             </table>
         </div>
     </div>
@@ -196,9 +212,8 @@
 
     <!-- SCRIPT JS ONLINE -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+        </script>
     <!-- <div id="message-container">
         {% if messages %}
             {% for message in messages %}
