--- a/mahasiswa/templates/mahasiswa/index.html
+++ b/mahasiswa/templates/mahasiswa/index.html
@@ -64,9 +64,9 @@
                 </li>
 
                 <!-- MENU KEMBALI -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/about/">About</a>
-                </li>
+                </li> -->
 
                 <!-- MENU Laporan -->
                 <li class="nav-item">
@@ -180,11 +180,11 @@
     </footer>
 
     <!-- SCRIPT JS ONLINE -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous">
-    </script>
-    <!-- <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script> -->
+    </script> -->
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
