--- a/sidang/templates/sidang/index.html
+++ b/sidang/templates/sidang/index.html
@@ -65,9 +65,9 @@
                 </li>
 
                 <!-- MENU KEMBALI -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/about/">About</a>
-                </li>
+                </li> -->
 
                 <!-- MENU Laporan -->
                 <li class="nav-item">
@@ -91,8 +91,12 @@
         {% if 'mhs_id' in request.session %}
             <h6>
                 Tanggal Sidang : 
+                {% for data in dataSidang %}
+                    {{ data.tanggal }}
+                {% endfor %}
             </h6>
         {% endif %}
+        
         <hr>
         <div class="table-responsive">
             <table class="table text-center">
@@ -121,14 +125,7 @@
 
                     {% if 'petugas_id' in request.session %}
                     <td>{{ data.nim }}</td>
-                    
-                    <td>
-                        {% for w in dataWaktu %}
-                            {% if w.nim == data.nim %}
-                                {{ w.waktu_sidang }}
-                            {% endif %}
-                        {% endfor %}
-                    </td>
+                    <td>{{ data.tanggal }}</td>
                     {% endif %}
 
                     <td>{{ data.s_persetujuan }}</td>
@@ -211,9 +208,9 @@
     </footer>
 
     <!-- SCRIPT JS ONLINE -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-        </script>
+        </script> -->
     <!-- <div id="message-container">
         {% if messages %}
             {% for message in messages %}
@@ -221,7 +218,7 @@
             {% endfor %}
         {% endif %}
     </div> -->
-    <!-- <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script> -->
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
