--- a/sidang/templates/sidang/update.html
+++ b/sidang/templates/sidang/update.html
@@ -65,9 +65,9 @@
                 </li>
 
                 <!-- MENU KEMBALI -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/about/">About</a>
-                </li>
+                </li> -->
 
                 <!-- MENU Laporan -->
                 <li class="nav-item">
@@ -91,6 +91,14 @@
                         <td>NIM</td>
                         <td>{{ dataForm.nim }}</td>
                     </tr>
+
+                    {% if 'petugas_id' in request.session %}
+                    <tr>
+                        <td>Tanggal</td>
+                        <td>{{ dataFormTgl.tanggal }}</td>
+                    </tr>
+                    {% endif %}
+
                     <tr>
                         <td>Surat Persetujuan</td>
                         <td>{{ dataForm.s_persetujuan }}</td>
@@ -183,10 +191,10 @@
     </footer>
 
     <!-- SCRIPT JS ONLINE -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-        </script>
-    <!-- <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script> -->
+        </script> -->
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
