--- a/yudisium/templates/yudisium/index.html
+++ b/yudisium/templates/yudisium/index.html
@@ -64,9 +64,9 @@
                 </li>
 
                 <!-- MENU KEMBALI -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/about/">About</a>
-                </li>
+                </li> -->
 
                 <!-- MENU Laporan -->
                 <li class="nav-item">
@@ -87,6 +87,15 @@
             </a>
         </center>
 
+        {% if 'mhs_id' in request.session %}
+            <h6>
+                Tanggal Yudisium : 
+                {% for data in dataYudisium %}
+                    {{ data.tanggal }}
+                {% endfor %}
+            </h6>
+        {% endif %}
+
         <hr>
         <div class="table-responsive">
             <table class="table text-center">
@@ -95,6 +104,7 @@
 
                     {% if 'petugas_id' in request.session %}
                     <th>NIM</th>
+                    <th>Tanggal Yudisium</th>
                     {% endif %}
 
                     <th>Transkrip</th>
@@ -116,6 +126,7 @@
 
                     {% if 'petugas_id' in request.session %}
                     <td>{{ data.nim }}</td>
+                    <td>{{ data.tanggal }}</td>
                     {% endif %}
 
                     <td>{{ data.transkrip }}</td>
@@ -199,10 +210,10 @@
     </footer>
 
     <!-- SCRIPT JS ONLINE -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous">
-    </script>
+    </script> -->
     <!-- <div id="message-container">
         {% if messages %}
             {% for message in messages %}
@@ -210,7 +221,7 @@
             {% endfor %}
         {% endif %}
     </div> -->
-    <!-- <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script> -->
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
