--- a/mahasiswa/templates/mahasiswa/update.html
+++ b/mahasiswa/templates/mahasiswa/update.html
@@ -42,7 +42,7 @@
                 </li>
 
                 <!-- MENU DATA -->
-                {% if 'petugas_id' in request.session %}
+                {% if 'petugas_fakultas' in request.session %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">Data </a>
 
