--- a/sidang/templates/sidang/index.html
+++ b/sidang/templates/sidang/index.html
@@ -43,7 +43,7 @@
                 </li>
 
                 <!-- MENU DATA -->
-                {% if 'petugas_id' in request.session %}
+                {% if 'petugas_fakultas' in request.session %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">Data </a>
 
@@ -82,11 +82,13 @@
     <div class="container mt-5">
         <h1 class="text-center">SIDANG</h1>
 
+        {% if 'petugas_fakultas' in request.session %}
         <center class="mt-3">
             <a href="/sidang/tambah/">
                 <button class="btn btn-dark">Daftar Sidang</button>
             </a>
         </center>
+        {% endif %}
 
         {% if 'mhs_id' in request.session %}
             <h6>
@@ -103,7 +105,7 @@
                 <tr>
                     <th>ID</th>
 
-                    {% if 'petugas_id' in request.session %}
+                    {% if 'petugas_fakultas' in request.session or 'petugas_prodi' in request.session %}
                     <th>NIM</th>
                     <th>Tanggal Sidang</th>
                     {% endif %}
@@ -115,7 +117,9 @@
                     <th>KRS</th>
                     <th>Kartu Bimbingan</th>
                     <th>Transkrip</th>
+                    {% if 'petugas_fakultas' in request.session %}
                     <th colspan="2">Aksi</th>
+                    {% endif %}
                 </tr>
 
                 {% for data in dataSidang %}
@@ -123,7 +127,7 @@
                 <tr>
                     <td>{{ data.id_sidang }}</td>
 
-                    {% if 'petugas_id' in request.session %}
+                    {% if 'petugas_fakultas' in request.session or 'petugas_prodi' in request.session %}
                     <td>{{ data.nim }}</td>
                     <td>{{ data.tanggal }}</td>
                     {% endif %}
@@ -135,6 +139,7 @@
                     <td>{{ data.krs }}</td>
                     <td>{{ data.kartu_bimbingan }}</td>
                     <td>{{ data.transkrip }}</td>
+                    {% if 'petugas_fakultas' in request.session %}
                     <td>
                         <button type="submit" class="btn btn-primary">
                             <a href="/sidang/{{ data.id_sidang }}/update/" class="text-center text-light">Edit</a>
@@ -144,6 +149,7 @@
                                 onclick="return confirm('Hapus Data?')">Hapus</a>
                         </button>
                     </td>
+                    {% endif %}
                 </tr>
 
                 {% endfor %}
