--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                 </li>
 
                 <!-- MENU DATA -->
-                {% if 'petugas_id' in request.session %}
+                {% if 'petugas_fakultas' in request.session %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">Data </a>
 
