--- a/yudisium/templates/yudisium/index.html
+++ b/yudisium/templates/yudisium/index.html
@@ -42,7 +42,7 @@
                 </li>
 
                 <!-- MENU DATA -->
-                {% if 'petugas_id' in request.session %}
+                {% if 'petugas_fakultas' in request.session %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">Data </a>
 
@@ -81,11 +81,13 @@
     <div class="container mt-5">
         <h1 class="text-center">DATA YUDISIUM</h1>
 
+        {% if 'petugas_fakultas' in request.session %}
         <center class="mt-3">
             <a href="/yudisium/tambah/">
                 <button class="btn btn-dark">Daftar Yudisium</button>
             </a>
         </center>
+        {% endif %}
 
         {% if 'mhs_id' in request.session %}
             <h6>
@@ -102,7 +104,7 @@
                 <tr>
                     <th>ID</th>
 
-                    {% if 'petugas_id' in request.session %}
+                    {% if 'petugas_fakultas' in request.session or 'petugas_prodi' in request.session %}
                     <th>NIM</th>
                     <th>Tanggal Yudisium</th>
                     {% endif %}
@@ -115,7 +117,10 @@
                     <th>SK Bebas Pinjaman</th>
                     <th>SK Bebas Plagiasi</th>
                     <th>Bukti Pembayaran</th>
+
+                    {% if 'petugas_fakultas' in request.session %}
                     <th colspan="2">Aksi</th>
+                    {% endif %}
                 </tr>
     
                 <!-- PERULANGAN DATA PETUGAS -->
@@ -124,7 +129,7 @@
                 <tr>
                     <td>{{ data.id_yudisium }}</td>
 
-                    {% if 'petugas_id' in request.session %}
+                    {% if 'petugas_fakultas' in request.session or 'petugas_prodi' in request.session %}
                     <td>{{ data.nim }}</td>
                     <td>{{ data.tanggal }}</td>
                     {% endif %}
@@ -137,6 +142,7 @@
                     <td>{{ data.sk_bebasPinjaman }}</td>
                     <td>{{ data.sk_bebasPlagiasi }}</td>
                     <td>{{ data.bukti_pembayaran }}</td>
+                    {% if 'petugas_fakultas' in request.session %}
                     <td>
                         <button type="submit" class="btn btn-primary">
                             <a href="/yudisium/{{ data.id_yudisium }}/update/" class="text-center text-light">Edit</a>
@@ -145,6 +151,7 @@
                             <a href="/yudisium/{{ data.id_yudisium }}/hapus/" class="text-center text-light" onclick="return confirm('Hapus Data?')">Hapus</a>
                         </button>
                     </td>
+                    {% endif %}
                 </tr>
     
                 {% endfor %}
